--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/spider.css">
     <!--<link href='http://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -9,9 +10,8 @@
     <script src="js/card.js"></script>
     <script src="js/deck.js"></script>
     <script src="js/game.js"></script>
-    <!--
-    <script src="js/tetris.js"></script>
-    <script src="js/quickstart.js"></script>
+    <script src="js/spider.js"></script>
+    <!--<script src="js/quickstart.js"></script>
     <script src="js/competitive.js"></script>
     <script src="js/cooperative.js"></script>-->
     <title>Solitaire Test</title>
